--- a/test/resources/application-test.yml
+++ b/test/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
     name: my-test-app
   datasource:
     username: sa
-    password:
+    password: ''
     url: jdbc:h2:mem:test
     driver-class-name: org.h2.Driver
 
