--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,5 @@ dmypy.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/git,visualstudiocode,intellij+all,python
+
+target/
